2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-structure.c: Stop crash due to recursive references (#518640).
	Patch by Tom Parker
	* rsvg-private.h: ditto
	* rsvg-base.c: ditto
	* rsvg-cairo-render.c: ditto
	
2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-mask.c: another memory leak (#552919). Found by mclasen.
	
2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-gobject.c: gdmgreeter segfault due to libxml2 API/ABI change
	(#549087). Patch by Tom Parker (palfrey%40tevp.net). Untested against
	libxml2 >= 2.7.0, but DV says "from the distance, that patch seems 
	to do the right thing"
	* rsvg-base.c: ditto

2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-convert.c: background color setting feature in rsvg_convert program
	(#556969). Patch inspired by harobed (stephane%40harobed.org)
	* librsvg.def: Export 1 function necessary for the above
	
2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-convert.c: command-line tools can't handle UTF-8 encoded 
	filenames (#557036, reported by Tim Starling)
	* test-display.c: ditto
	
2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.22.4.

==================== 2.22.3 ====================

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.22.3

2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-cairo.h: Make cairo render functions return a gboolean. Returns TRUE
	if the image can't be rendered
	* rsvg.c: Check && handle the return value
	* rsvg-cairo-render.c: Implement the above. Also, return FALSE if we're asked
	to render an ID that doesn't exist

	Collectively, fixes #540383 - rsvg_handle_render_cairo_sub - if ID not found, 
	return an error and/or dont render whole SVG
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-private.h: #539488 - migrate use of GMemChunk to GSlice, from Felix Riemann
	* rsvg-base.c: ditto
	* rsvg-styles.c: ditto