@@ -1,3 +1,7 @@
+2008-11-05  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* rsvg-private.h: Don't use deprecated glib symbols.
+
 2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>
 
 	* rsvg-structure.c: Stop crash due to recursive references (#518640).
